<resources>
    <string name="ab_faq_need_more_help">Need more help?</string>
    <string name="ab_op_help">HELP</string>
    <string name="ab_reward_earn_points">Earn tokens~</string>
    <string name="ab_reward_failed">Failed</string>
    <string name="ab_reward_go_to_the">Go to the</string>
    <string name="ab_reward_points" />
    <string name="ab_reward_qa_community">QA Forum</string>
    <string name="ab_reward_success">Success</string>
    <string name="ab_reward_your_points">Your tokens:</string>
    <string name="ab_reward_your_points_is_insufficient">Your tokens is insufficient</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">雷霆加速器</string>
    <string name="app_tile_first_use">First use of this feature, please use the app to activate VPN</string>
    <string name="app_tile_name">Switch</string>
    <string name="app_widget_name">Switch</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="break_off_remind">Your network is disconnected,please try again later</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="child_count_error">FABProgressCircle layout must only contain one child.</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="connection_connected">Connected, tap to check connection</string>
    <string name="connection_not_connected">Not connected</string>
    <string name="connection_test_available">Success: HTTPS handshake took %dms</string>
    <string name="connection_test_error">Fail to detect internet connection: %s</string>
    <string name="connection_test_error_status_code">Error code: #%d</string>
    <string name="connection_test_fail">Internet Unavailable</string>
    <string name="connection_test_pending">Check Connectivity</string>
    <string name="connection_test_testing">Testing…</string>
    <string name="del_config_comfirm">Confirm delete？</string>
    <string name="donate_detail">Add some experimental advanced features</string>
    <string name="donate_error_inventory">Error querying inventory</string>
    <string name="donate_error_purchase1">Error Purchase:</string>
    <string name="donate_error_purchase2">Error Purchase,Authenticity verification failed.</string>
    <string name="donate_error_setup">Error Setup:</string>
    <string name="donate_item_click">Donate</string>
    <string name="donate_item_paypal">Paypal</string>
    <string name="donate_success_purchase">Thank you for your donation!</string>
    <string name="expand_button_title">Advanced</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="goto_Elva">Contact Us</string>
    <string name="hate_it">Disliked it!</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="like_it">Loved it!</string>
    <string name="logcat_copy">Copy</string>
    <string name="main_title">Elva</string>
    <string name="mark_helpful_toast">You found this helpful</string>
    <string name="mark_no">NO</string>
    <string name="mark_unhelpful_toast">"You didn't find this helpful"</string>
    <string name="mark_yes">YES</string>
    <string name="mark_yes_no_question">Was this helpful?</string>
    <string name="menu_item_add_config">Add config</string>
    <string name="menu_item_del_config">Delete config</string>
    <string name="menu_item_import_config_clipboard">Import config from Clipboard</string>
    <string name="menu_item_import_config_custom">custom config</string>
    <string name="menu_item_import_config_custom_clipboard">Import custom config from Clipboard</string>
    <string name="menu_item_import_config_custom_local">Import custom config from locally</string>
    <string name="menu_item_import_config_custom_url">Import custom config from URL</string>
    <string name="menu_item_import_config_custom_url_scan">Import custom config scan URL</string>
    <string name="menu_item_import_config_manually_socks">Type manually[Socks]</string>
    <string name="menu_item_import_config_manually_ss">Type manually[Shadowsocks]</string>
    <string name="menu_item_import_config_manually_vmess">Type manually[Vmess]</string>
    <string name="menu_item_import_config_qrcode">Import config from QRcode</string>
    <string name="menu_item_save_config">Save config</string>
    <string name="menu_item_select_all">Select all</string>
    <string name="menu_item_select_proxy_app">Auto select proxy app</string>
    <string name="msg_dialog_progress">Loading</string>
    <string name="msg_downloading_content">Downloading content</string>
    <string name="msg_enter_keywords">Enter keywords</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="no_more_than_chars">No more than %s chars!</string>
    <string name="no_png_upload">SD card does not exist or can not be written!</string>
    <string name="notification_action_more">click for more</string>
    <string name="notification_action_stop_v2ray">Stop</string>
    <string name="offline_notification_text">Tap to open ad</string>
    <string name="offline_notification_title">View the ad you saved when you were offline</string>
    <string name="offline_opt_in_confirm">OK</string>
    <string name="offline_opt_in_confirmation">"You'll get a notification with the link when you're back online"</string>
    <string name="offline_opt_in_decline">No thanks</string>
    <string name="offline_opt_in_message">"We'll send you a notification with a link to the advertiser site."</string>
    <string name="server_lab_address">address</string>
    <string name="server_lab_alterid">alterId</string>
    <string name="server_lab_head_type">head type</string>
    <string name="server_lab_id">id</string>
    <string name="server_lab_more_function">more function</string>
    <string name="server_lab_network">network</string>
    <string name="server_lab_path">path(ws path/h2 path)/QUIC key</string>
    <string name="server_lab_port">port</string>
    <string name="server_lab_remarks">remarks</string>
    <string name="server_lab_request_host">request host(host/ws host/h2 host)/QUIC securty</string>
    <string name="server_lab_security">security</string>
    <string name="server_lab_stream_security">tls</string>
    <string name="sub_setting_remarks">remarks</string>
    <string name="sub_setting_url">url</string>
    <string name="summary_pref_domestic_dns">DNS</string>
    <string name="summary_pref_forward_ipv6">Redirect IPv6 traffic to remote (BETA)</string>
    <string name="summary_pref_local_dns_enabled">DNS processed by v2ray-core (BETA)</string>
    <string name="summary_pref_per_app_proxy">Per-app proxy mode only support Android 5.0 Lollipop or higher</string>
    <string name="summary_pref_remote_dns">DNS</string>
    <string name="summary_pref_sniffing_enabled">Sniffing</string>
    <string name="summary_pref_speed_enabled">Display current speed in the notification</string>
    <string name="switch_bypass_apps_mode">Bypass Mode</string>
    <string name="title_about">About</string>
    <string name="title_advanced">Advanced Settings</string>
    <string name="title_logcat">Logcat</string>
    <string name="title_pref_domestic_dns">Domestic DNS (Optional, effects on LocalDNS mode)</string>
    <string name="title_pref_donate">Donate</string>
    <string name="title_pref_feedback">Feedback</string>
    <string name="title_pref_forward_ipv6">IPv6 Route</string>
    <string name="title_pref_http_port">HTTP proxy port</string>
    <string name="title_pref_local_dns_enabled">Enable local DNS</string>
    <string name="title_pref_per_app_proxy">Per-app proxy</string>
    <string name="title_pref_promotion">Promotion</string>
    <string name="title_pref_remote_dns">Remote DNS (Optional)</string>
    <string name="title_pref_routing">Routing</string>
    <string name="title_pref_routing_custom">Custom routing</string>
    <string name="title_pref_routing_domain_strategy">Domain strategy</string>
    <string name="title_pref_routing_mode">Routing mode</string>
    <string name="title_pref_sniffing_enabled">Enable Sniffing</string>
    <string name="title_pref_socks_port">SOCKS5 proxy port</string>
    <string name="title_pref_speed_enabled">Enable speed display</string>
    <string name="title_pref_version">Version</string>
    <string name="title_server">Configuration file</string>
    <string name="title_settings">Settings</string>
    <string name="title_sub_setting">Subscription setting</string>
</resources>