<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@id/group_main" android:checkableBehavior="single">
        <item android:icon="@drawable/ic_description_white_24dp" android:id="@id/server_profile" android:title="@string/title_server" />
        <item android:icon="@drawable/ic_subscriptions_white_24dp" android:id="@id/sub_setting" android:title="@string/title_sub_setting" />
        <item android:icon="@drawable/ic_settings_white_24dp" android:id="@id/settings" android:title="@string/title_settings" />
    </group>
    <item android:title="@string/title_about">
        <menu>
            <item android:icon="@drawable/ic_whatshot_white_24dp" android:id="@id/promotion" android:title="@string/title_pref_promotion" />
            <item android:icon="@drawable/ic_attach_money_white_24dp" android:id="@id/donate" android:title="@string/title_pref_donate" />
            <item android:icon="@drawable/ic_logcat_white_24dp" android:id="@id/logcat" android:title="@string/title_logcat" />
            <item android:icon="@drawable/ic_feedback_white_24dp" android:id="@id/feedback" android:title="@string/title_pref_feedback" />
        </menu>
    </item>
</menu>