<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="@dimen/layout_margin_top_height" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Subhead" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_server" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/layout_margin_top_height">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/server_lab_remarks" />
            <EditText android:id="@id/et_remarks" android:layout_width="fill_parent" android:layout_height="@dimen/edit_height" android:inputType="text" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/layout_margin_top_height">
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/server_lab_address" />
            <EditText android:id="@id/et_address" android:layout_width="fill_parent" android:layout_height="@dimen/edit_height" android:inputType="text" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/layout_margin_top_height">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/server_lab_port" />
            <EditText android:id="@id/et_port" android:layout_width="fill_parent" android:layout_height="@dimen/edit_height" android:inputType="number" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/layout_margin_top_height">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/server_lab_id" />
            <EditText android:id="@id/et_id" android:layout_width="fill_parent" android:layout_height="@dimen/edit_height" android:inputType="text" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/layout_margin_top_height">
            <TextView android:id="@id/tv_alterId" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/server_lab_alterid" />
            <EditText android:id="@id/et_alterId" android:layout_width="fill_parent" android:layout_height="@dimen/edit_height" android:inputType="number" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/layout_margin_top_height">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/server_lab_security" />
            <Spinner android:entries="@array/securitys" android:id="@id/sp_security" android:layout_width="fill_parent" android:layout_height="@dimen/edit_height" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/layout_margin_top_height">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/server_lab_network" />
            <Spinner android:entries="@array/networks" android:id="@id/sp_network" android:layout_width="fill_parent" android:layout_height="@dimen/edit_height" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/layout_margin_top_height">
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Subhead" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/server_lab_more_function" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/layout_margin_top_height">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/server_lab_head_type" />
            <Spinner android:entries="@array/headertypes" android:id="@id/sp_header_type" android:layout_width="fill_parent" android:layout_height="@dimen/edit_height" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/layout_margin_top_height">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/server_lab_request_host" />
            <EditText android:id="@id/et_request_host" android:layout_width="fill_parent" android:layout_height="@dimen/edit_height" android:inputType="text" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/layout_margin_top_height">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/server_lab_path" />
            <EditText android:id="@id/et_path" android:layout_width="fill_parent" android:layout_height="@dimen/edit_height" android:inputType="text" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/layout_margin_top_height">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/server_lab_stream_security" />
            <Spinner android:entries="@array/streamsecuritys" android:id="@id/sp_stream_security" android:layout_width="fill_parent" android:layout_height="@dimen/edit_height" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/layout_margin_top_height" android:layout_marginBottom="@dimen/layout_margin_top_height" />
    </LinearLayout>
</ScrollView>