<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:padding="@dimen/layout_margin_top_height" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Subhead" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_server" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/layout_margin_top_height">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sub_setting_remarks" />
                <EditText android:id="@id/et_remarks" android:layout_width="fill_parent" android:layout_height="@dimen/edit_height" android:inputType="text" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/layout_margin_top_height">
                <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sub_setting_url" />
                <EditText android:gravity="top" android:id="@id/et_url" android:background="@android:drawable/edit_text" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:maxLines="10" android:minLines="5" android:inputType="textMultiLine" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/layout_margin_top_height" android:layout_marginBottom="@dimen/layout_margin_top_height" />
    </LinearLayout>
</ScrollView>